--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            DorimSafeMap
+        </title>
+        <link rel="stylesheet" href = "style.css">
+    </head>
+
+    <body>
+        <div class = "wrap">
+            <div class="header">
+                header
+            </div>
+
+            <div class="nav">
+                
+            </div>
+
+            <div class="contents">
+                <button class = "button1" type = "button" onclick = "imgopen()"><img class="ping" src = "ping.png" alt=""></button>
+            </div>
+
+            <div class="footer">
+                
+            </div>
+        </div>
+
+        <script>
+            function imgopen(){
+                <img src="Door.png">
+            }
+        </script>
+
+
+    </body>
+</html>
